# wasp

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  TODO
ExampleProject/: .project.xw  CMakeLists.txt  config.local.yml  config.yml  main.cpp
ExampleProject/ExampleProject/: settings.cpp  settings.h
ExampleProject/ExampleProject/middleware/: useful.cpp  useful.h
ExampleProject/form_app/: app.cpp  app.h
ExampleProject/form_app/views/: form_view.cpp  form_view.h
ExampleProject/main_app/: app.cpp  app.h
ExampleProject/main_app/commands/: hello.cpp  hello.h
ExampleProject/main_app/views/: main_view.cpp  main_view.h  redirect_view.cpp  redirect_view.h
ExampleProject/picture_app/: app.cpp  app.h
ExampleProject/picture_app/views/: picture_view.cpp  picture_view.h
ExampleProject/templates/form/: form.html
ExampleProject/templates/picture/: river.html
example/: CMakeLists.txt  config.yml  form_view.h  http_server.cpp  main.cpp
example/example_app/: config.h  local_settings.cpp  local_settings.h  main_view.h  settings.cpp  settings.h
example/example_app/env/: my_engine.cpp  my_engine.h
example/example_app/libs/: my_first_lib.h  my_lib.cpp  my_lib.h
example/example_app/middleware/: useful_middleware.cpp  useful_middleware.h
example/form_app/: app.h  config.h  form_view.h
example/form_app/templates/: form.html
example/main_app/: app.cpp  app.h  main_view.cpp  main_view.h
example/main_app/commands/: hello_command.cpp  hello_command.h
example/main_app/templates/: index.html
example/picture_app/: app.h  config.h  picture_view.h
example/templates/form_app/: form.html
example/templates/main_app/: index.html
example/templates/picture_app/: river.html
src/: CMakeLists.txt  _def_.h  def.h  globals.h  platform.h
src/apps/: _def_.h  abc.h  config.cpp  config.h  interface.h  interfaces.h  module.cpp  module.h  wasp.cpp  wasp.h  xalwart.cpp  xalwart.h
src/collections/: _def_.h  dict.h  multi_dict.h
src/commands/: _def_.h  abstract_command.cpp  abstract_command.h  app_command.cpp  app_command.h  base.cpp  base.h  command.cpp  command.h
src/commands/flags/: _def_.h  default.h  flag.cpp  flag.h  flag_set.cpp  flag_set.h  parser.cpp  parser.h
src/conf/: _def_.h  abc.h  application.cpp  application.h  def.h  defaults.h  interfaces.h  load.h  module.cpp  module.h  settings.cpp  settings.h  settings_factory.cpp  settings_factory.h  types.h  xalwart.cpp  xalwart.h
src/conf/loaders/: abstract_loader.h  base_settings_loader.h  yaml_loader.cpp  yaml_loader.h  yaml_settings_loader.cpp  yaml_settings_loader.h
src/controllers/: _def_.h  controller.cpp  controller.h  redirect.cpp  redirect.h  static.cpp  static.h  template.cpp  template.h
src/core/: _def_.h  datetime.cpp  datetime.h  encoding.cpp  encoding.h  exceptions.cpp  exceptions.h  http_server.cpp  http_server.h  kwargs.h  logger.cpp  logger.h  media_type.cpp  media_type.h  mime_types.cpp  mime_types.h  path.cpp  path.h  regex.cpp  regex.h  server.cpp  server.h  string.cpp  string.h  tcp.cpp  tcp.h  tcp_def.h  tcp_server.cpp  tcp_server.h  tcplib.h  thread_pool.cpp  thread_pool.h  uploaded_file.cpp  uploaded_file.h  utility.cpp  utility.h
src/core/datetime/: _def_.h  constants.cpp  constants.h  date.cpp  date.h  datetime.cpp  datetime.h  dt.cpp  dt.h  time.cpp  time.h  timezone.cpp  timezone.h
src/core/files/: base.cpp  base.h  file.cpp  file.h  uploaded_file.cpp  uploaded_file.h
src/core/flags/: _def_.h  default.cpp  default.h  flag.cpp  flag.h  flag_set.cpp  flag_set.h  flags.cpp  flags.h  parser.cpp  parser.h
src/http/: _def_.h  abc.h  cookie.cpp  cookie.h  def.h  error.cpp  error.h  errors.h  exceptions.h  headers.h  http_server.cpp  http_server.h  interfaces.h  meta.h  multipart.cpp  multipart.h  request.cpp  request.h  request1.cpp  request1.h  request2.cpp  request2.h  request_parameters.h  response.cpp  response.h  result.h  signer.cpp  signer.h  status.cpp  status.h  url.cpp  url.h  utility.cpp  utility.h
src/management/: _def_.h  app.cpp  app.h  module.cpp  module.h
src/middleware/: _def_.h  abc.h  base.h  clickjacking.cpp  clickjacking.h  common.cpp  common.h  cookies.cpp  cookies.h  exception.cpp  exception.h  http.cpp  http.h  interface.h  interfaces.h  middleware_mixin.cpp  middleware_mixin.h  security.cpp  security.h  types.h
src/render/: _def_.h  base.cpp  base.h  base_engine.h  builtins.cpp  builtins.h  context.cpp  context.h  default.cpp  default_library.cpp  default_library.h  engine.cpp  engine.h  exceptions.cpp  exceptions.h  functions.cpp  functions.h  library.h  loader.cpp  loader.h  loaders.cpp  loaders.h  response.cpp  response.h  standard_library.cpp  standard_library.h  template.cpp  template.h
src/urls/: _def_.h  abc.h  def.h  interfaces.h  pattern.cpp  pattern.h  resolver.cpp  resolver.h  url.cpp  url.h  utilities.h
src/utility/: _def_.h  cache.cpp  cache.h  encoding.cpp  encoding.h  functional.h  logger.cpp  logger.h  mime_types.cpp  mime_types.h  path.cpp  path.h  regex.h  str.cpp  str.h
src/utils/: _def_.h  cache.cpp  cache.h  datetime.cpp  datetime.h  dict.h  encoding.cpp  encoding.h  functional.h  http.cpp  http.h  logger.cpp  logger.h  mime_types.cpp  mime_types.h  path.cpp  path.h  query_dict.h  query_set.h  str.cpp  str.h  str_utils.cpp  str_utils.h  tz.h
src/views/: _def_.h  args.cpp  args.h  generic.cpp  generic.h  redirect_view.cpp  redirect_view.h  static.cpp  static.h  template_view.cpp  template_view.h  view.cpp  view.h
tests/: CMakeLists.txt  _def_.h  globals.h  main.cpp  mem_leak_check.h  utils.h
tests/commands/: main.cpp
tests/controllers/: main.cpp  tests_controller.cpp  tests_redirect_controller.cpp
tests/core/: main.cpp  tests_encoding.cpp  tests_kwargs.cpp  tests_mime_types.cpp
tests/http/: main.cpp  tests_cookie.cpp  tests_error.cpp  tests_result.cpp  tests_url.cpp  tests_utility.cpp
tests/unittests/: _def_.h  globals.h  include.h  main.cpp  mem_leak_check.h
tests/utility/: main.cpp
tests/utils/: tests_http.cpp
tests/views/: tests_args.cpp  tests_redirect_view.cpp  tests_view.cpp
(+517 files in other folders)
